crates/fundle/tests/proc/bundle_enum.stderr
error: fundle::bundle can only be applied to structs
 --> tests/proc/bundle_enum.rs:5:1
  |
5 | enum Foo {}
  | ^^^^^^^^^^^
