crates/fundle/tests/proc/bundle_enum.rs
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.

#[fundle::bundle]
enum Foo {}

fn main() {}
